Some changes from meeting

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -1,87 +1,95 @@
-@inproceedings{parsing-mixfix-operators,
-    author = {Nils Anders Danielsson and Ulf Norell},
-    title = {Parsing mixfix operators},
-    booktitle = {Implementation and Application of Functional Languages},
-    address = {Berlin, Germany},
-    year = {2011},
-    publisher = {Springer Berlin Heidelberg},
-    pages = {80-99}
+@incollection{parsing-mixfix-operators,
+    author={Danielsson, Nils Anders and Norell, Ulf},
+    title={Parsing mixfix operators},
+    booktitle={Implementation and Application of Functional Languages},
+    pages={80--99},
+    year={2008},
+    publisher={Springer}
+}
+
+@inproceedings{less-ad-hoc-polymorphism,
+    author={Philip Wadler and Stephen Blott},
+    title={How to make ad-hoc polymorphism less ad hoc},
+    booktitle={Proceedings of the 16th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+    year={1989},
+    pages={60--76},
+    organization={ACM}
 }
 
 @online{python-parser,
-    author = {Bernard James Pope},
-    title = {language-python},
-    version = {0.5.2},
-    year = {2008},
-    url = {https://hackage.haskell.org/package/language-python},
-    urldate = {2016-02-05},
-    howpublised = {\url{https://hackage.haskell.org/package/language-python}}
+    author={Bernard James Pope},
+    title={language-python},
+    version={0.5.2},
+    year={2008},
+    url={https://hackage.haskell.org/package/language-python},
+    urldate={2016-02-05},
+    howpublised={\url{https://hackage.haskell.org/package/language-python}}
 }
 
 @online{ghc,
-    author = {Kevin Hammond},
-    title = {GHC},
-    version = {7.10.2},
-    year = {1992},
-    url = {https://www.haskell.org/ghc/},
-    urldate = {2016-02-05},
-    howpublised = {\url{https://github.com/ghc/ghc}}
+    author={Kevin Hammond},
+    title={GHC},
+    version={7.10.2},
+    year={1992},
+    url={https://www.haskell.org/ghc/},
+    urldate={2016-02-05},
+    howpublised={\url{https://github.com/ghc/ghc}}
 }
 
 @online{alex,
-    author = {Simon Marlow and Chris Dornan},
-    title = {Alex},
-    version = {3.1.7},
-    year = {1995},
-    url = {https://www.haskell.org/alex/},
-    urldate = {2016-02-07},
-    howpublised = {\url{http://hackage.haskell.org/package/alex}}
+    author={Simon Marlow and Chris Dornan},
+    title={Alex},
+    version={3.1.7},
+    year={1995},
+    url={https://www.haskell.org/alex/},
+    urldate={2016-02-07},
+    howpublised={\url{http://hackage.haskell.org/package/alex}}
 }
 
 @online{happy,
-    author = {Simon Marlow and Andy Gill},
-    title = {Happy},
-    version = {1.19.5},
-    year = {1997},
-    url = {https://www.haskell.org/happy/},
-    urldate = {2016-02-07},
-    howpublised = {\url{http://hackage.haskell.org/package/happy}}
+    author={Simon Marlow and Andy Gill},
+    title={Happy},
+    version={1.19.5},
+    year={1997},
+    url={https://www.haskell.org/happy/},
+    urldate={2016-02-07},
+    howpublised={\url{http://hackage.haskell.org/package/happy}}
 }
 
 @online{megaparsec,
-    author = {Mark Karpov},
-    title = {Megaparsec},
-    version = {4.3},
-    year = {2016},
-    url = {https://hackage.haskell.org/package/megaparsec},
-    urldate = {2016-02-04},
-    howpublised = {\url{https://hackage.haskell.org/package/megaparsec}}
+    author={Mark Karpov},
+    title={Megaparsec},
+    version={4.3},
+    year={2016},
+    url={https://hackage.haskell.org/package/megaparsec},
+    urldate={2016-02-04},
+    howpublised={\url{https://hackage.haskell.org/package/megaparsec}}
 }
 
 @online{scrap-type-classes,
-    author = {Gabriel Gonzalez},
-    title = {Scrap your type classes},
-    year = {2012},
-    url = {http://www.haskellforall.com/2012/05/scrap-your-type-classes.html},
-    urldate = {2016-02-04}
+    author={Gabriel Gonzalez},
+    title={Scrap your type classes},
+    year={2012},
+    url={http://www.haskellforall.com/2012/05/scrap-your-type-classes.html},
+    urldate={2016-02-04}
 }
 
 @online{agda,
-    author = {Ulf Norell},
-    title = {Agda},
-    version = {2.4.2},
-    year = {2007},
-    url = {http://wiki.portal.chalmers.se/agda/pmwiki.php},
-    urldate = {2016-02-04},
-    howpublised = {\url{http://wiki.portal.chalmers.se/agda/pmwiki.php}}
+    author={Ulf Norell},
+    title={Agda},
+    version={2.4.2},
+    year={2007},
+    url={http://wiki.portal.chalmers.se/agda/pmwiki.php},
+    urldate={2016-02-04},
+    howpublised={\url{http://wiki.portal.chalmers.se/agda/pmwiki.php}}
 }
 
 @online{haskell,
-    author = {Paul Hudak and Simon Peyton Jones and Philip Wadler and
+    author={Paul Hudak and Simon Peyton Jones and Philip Wadler and
         Brian Boutel and Jon Fairbairn and Joseph Fasel and María M Guzmán and
         Kevin Hammond and John Hughes and Thomas Johnsson},
-    title = {Haskell},
-    year = {1990},
-    url = {https://www.haskell.org/},
-    urldate = {2016-02-06}
+    title={Haskell},
+    year={1990},
+    url={https://www.haskell.org/},
+    urldate={2016-02-06}
 }
