Added some topics to be explained in the theoretical framework

--- a/usb-book/partes/marco-teorico.tex
+++ b/usb-book/partes/marco-teorico.tex
@@ -2,8 +2,24 @@
 \label{ch:marco-teorico}
 \lhead{Capítulo \getcurrentref{chapter}. \emph{\nameref{ch:marco-teorico}}}
 
-% De qué va a tratar el capítulo
-% El capítulo 1 suele ser el marco teórico.
+\section{Lógica simbólica}
+\subsection{Lógica intuicionista}
+
+\section{Teoría de conjuntos}
+\subsection{Paradoja de Russel}
+
+\section{Teoría de tipos}
+\subsection{Teoría de tipos dependientes}
+\subsection{Sistema de tipos de Hindley-Milner}
+
+\subsection{Correspondencia Curry-Howard y Martin-Löf}
+
+\section{Lenguajes de programación}
+\subsection{Lenguajes de programación funcional}
+
+\section{Herramientas didádcticas}
+\subsection{Tecnología para la educación}
+
 
 \section{@sección}
 \begin{definition}
